# 3detr

./: .gitignore  criterion.py  engine.py  main.py  plot_utils.py  pyproject.toml  run_tests.sh  sunrgbd_data.py  visualize.py
datasets/: __init__.py  scannet.py  sunrgbd.py
models/: __init__.py  model_3detr.py  transformer.py
utils/: box_ops3d.py  download_weights.py
