[project]
name = "3detr"
version = "0.1.0"
description = ""
authors = [
    {name = "killian31",email = "80256683+killian31@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "plyfile (>=1.1,<2.0)",
    "trimesh (>=2.35.39,<2.35.40)",
    "networkx (>=2.2,<2.3)",
    "scipy (>=1.15.1,<2.0.0)",
    "torch (==2.2.2)",
    "numpy (==1.26.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
